force-app/main/default/objects/Contract_Line_Item__c/fields/Avg_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Avg_List_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Avg List Price</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>