force-app/main/default/objects/Contract_Line_Item__c/fields/Contract_Line_Item_Group__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line_Item_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Line Item Group</label>
    <referenceTo>Contract_Line_Item_Group__c</referenceTo>
    <relationshipLabel>Contract Line Items</relationshipLabel>
    <relationshipName>Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>