force-app/main/default/objects/Contract_Line_Item__c/fields/Estimated_Hours_Labor__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours_Labor__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Estimated Hours Labor</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>