force-app/main/default/objects/Contract_Line_Item__c/fields/Estimated_Labor_Qty__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Labor_Qty__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText># Workers</inlineHelpText>
    <label>Estimated Labor Qty</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>