force-app/main/default/objects/Contract_Line_Item__c/fields/Labor_Factor__c.field-meta.xml
<CustomField>
    <fullName>Labor_Factor__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>+/- adjust Labor Costs. Half = 50% Enter 50</inlineHelpText>
    <label>% Labor Factor</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>