force-app/main/default/objects/Contract_Line_Item__c/fields/Line_Details__c.field-meta.xml
<CustomField>
    <fullName>Line_Details__c</fullName>
    <label>Line Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>