force-app/main/default/objects/Contract_Line_Item__c/fields/Material_Cost__c.field-meta.xml
<CustomField>
    <fullName>Material_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Material Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>