force-app/main/default/objects/Contract_Line_Item__c/fields/Material_Markup__c.field-meta.xml
<CustomField>
    <fullName>Material_Markup__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Material % Markup</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>