force-app/main/default/objects/Contract_Line_Item__c/fields/Opportunity_Product_Sync__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_Sync__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product Sync</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Contract Line Items</relationshipLabel>
    <relationshipName>Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>