force-app/main/default/objects/Contract_Line_Item__c/fields/PricebookEntry_Txt_Id__c.field-meta.xml
<CustomField>
    <fullName>PricebookEntry_Txt_Id__c</fullName>
    <label>PricebookEntry Txt Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>