force-app/main/default/objects/Contract_Line_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <inlineHelpText>150 char max</inlineHelpText>
    <label>Product Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>