force-app/main/default/objects/Contract_Line_Item__c/fields/Quantity_Scale__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Scale__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Quantity Scale</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>