force-app/main/default/objects/Contract_Line_Item__c/fields/Sales_Info_to_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Sales_Info_to_Estimate__c</fullName>
    <inlineHelpText>Internal communication from Sales Team to Estimate Team</inlineHelpText>
    <label>Sales Info to Estimate</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>