force-app/main/default/objects/Contract_Line_Item__c/fields/Template_Details__c.field-meta.xml
<CustomField>
    <fullName>Template_Details__c</fullName>
    <label>Template Details</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>