force-app/main/default/objects/Contract_Line_Item__c/fields/Unit_Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_Labor_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unit Labor Cost</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>