force-app/main/default/objects/Contract_Line_Item__c/fields/Unit_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_Measure__c</fullName>
    <label>Unit Measure</label>
    <length>20</length>
    <type>Text</type>
</CustomField>