force-app/main/default/objects/Contract_Line_Item__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <formula>((Material_Cost__c * (1 + Material_Markup__c ) + Unit_Labor_Cost__c * ( 1-Labor_Factor__c )) * Quantity__c + Flat_Labor_Cost__c ) / Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>